# CRM-backend-OC

./: .flake8  README.md  crm.toml  db_objects.py  main.py  pyproject.toml  requirements.txt
crm/: main.py
crm/controller/: __init__.py  core.py
crm/controller/manage/: authentication.py  common.py  contracts.py  customers.py  employees.py  events.py
crm/model/: __init__.py  core.py
crm/model/managers/: __init__.py  contracts.py  customers.py  employees.py  events.py  roles.py
crm/model/model_sample/: populate.py  sample.py
crm/model/models/: __init__.py  authentication.py  contract.py  customer.py  employee.py  event.py  role.py
crm/view/: __init__.py  common.py  interface.py  log.py
crm/view/cli/: view.py
model/: __init__.py  models.py
src/: __init__.py  main.py
src/controller/: __init__.py  core.py
src/controller/manage/: __init__.py  authentication.py  common.py  contracts.py  customers.py  employees.py  events.py
src/model/: __init__.py  core.py  models.py
src/model/managers/: __init__.py  contracts.py  customers.py  employees.py  events.py
src/model/model_sample/: populate.py  sample.py
src/model/models/: __init__.py  common.py  contract.py  customer.py  employee.py  event.py  role.py
src/view/: __init__.py  interface.py  log.py  requests.py  view.py
src/view/cli/: view.py
src/view/cli_input/: cli.py  employees.py
src/view/terminal_output/: console.py  contracts.py  customers.py  display.py  employees.py  events.py  input.py
tests/integration/cli_signatures/: common.py  test_cli_customer_signatures.py  (+1 more)
(+38 files in other folders)
