[tool.poetry]
name = "crm"
version = "0.1.0"
description = "CLI CRM application for EpicEvents"
authors = ["Anna"]
readme = "README.md"

[tool.poetry.scripts]
crm = "crm.main:main"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
click = "^8.1.7"
SQLAlchemy = "^2.0.23"
SQLAlchemy-Utils = "^0.41.1"
phonenumbers = "^8.13.26"
toml = "^0.10.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sentry-sdk = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = "--cov-report= --cov=crm --cov-fail-under 55"